UNRELEASED CHANGES:

* Add Webmanifest to create bookmarks on phones
* Add pets management
* Activities made with contact now appears in the Journal
* Add ability to rate how a day went in the Journal
* Add validation when changing email address
* Add ability to change account's password in the settings
* Show a user's avatar when searching

RELEASED VERSIONS:

v1.4.1 - 2017-12-13
-------------------

* Add default user account on setup

v1.4.0 - 2017-12-13
-------------------

* Add ability to add a birthday (or any date) without knowing the year
* Add the artisan command (CLI) `php artisan setup:test` to setup the development environment
* Remove the table `important_dates` which was not used
* Change how resetting an account is achieved
* Add progress bar when generating fake data to populate the dev environment

v1.3.0 - 2017-12-04
-------------------

* Notes can be set as favorites
* Favorite notes are shown on the dashboard
* Notes are now managed inline
* Add dynamic notifications when adding/updating/deleting data from Vue files
* Add ability to change account's owner first and last names

v1.2.0 - 2017-11-29
-------------------

* Add a much better way to manage tasks of a contact
* Tasks can now be mark as completed and can now be edited
* Add more usage statistics to reflect latest changes in the DB

v1.1.0 - 2017-11-26
-------------------

* Add the ability to add multiple contact fields and addresses per contact
* Add a new Personalization tab under Settings

v1.0.0 - 2017-11-09
-------------------

* Add the ability to mark a contact as deceased
* Add a button to `Save and add another contact` straight from the Add contact screen
* Add the ability to indicate how you've met someone
* Replace former front-end build system by mix (which is the new default with Laravel 5.5)
* Add a first part of the API
* Fix the access to upgrade account view
* Add security.txt file
* Upgrade codebase to Laravel 5.5

v0.7.1 - 2017-10-21
-------------------
